--- a/css/style.css
+++ b/css/style.css
@@ -80,13 +80,13 @@ h2 {
 .card {  
 	display: flex;	
 	align-items: flex-end;
-   width: 25%;   
-   padding: 50px 40px;   
-   border: 2px solid #dfdee8;
-   font-family: OpenSans, sans-serif, bold;
-   text-transform: Uppercase;
-   font-size: 15px;
-   color: white;	   
+  width: 25%;   
+  padding: 50px 1%;   
+  border: 2px solid #dfdee8;
+  font-family: OpenSans, sans-serif, bold;
+  text-transform: Uppercase;
+  font-size: 15px;
+  color: white;	   
 }
 
 
@@ -302,14 +302,13 @@ h2 {
 	margin-bottom:20px;
 	position: absolute;
 	padding: 15px 15px;	
-	margin-top:20px;
-	background-image: url("../svg/search.svg");	
+	margin-top:20px;	
 	background-color: #b59f5b;
 	border: none;
 	height: 47px;
 	width: 47px;
 	background-repeat: no-repeat;
-	background-position: center center;	
+	background-position: center center;		
 }
 
 .email_form {
